crates/macros/tests/fail/fixed-layout/enum.rs
use mem_markers::FixedLayout;

#[derive(FixedLayout)]
#[repr(C)]
enum Foo {
    A,
}

fn main() {}
