crates/macros/tests/fail/fixed-layout/enum.stderr
error: FixedLayout on enums is not currently supported
 --> $DIR/enum.rs:3:10
  |
3 | #[derive(FixedLayout)]
  |          ^^^^^^^^^^^
